--- a/CustomerCare/CustomerCare/App.xaml
+++ b/CustomerCare/CustomerCare/App.xaml
@@ -11,6 +11,7 @@
             <Color x:Key="DarkBackgroundColor">#C0C0C0</Color>
             <Color x:Key="MediumGrayTextColor">#4d4d4d</Color>
             <Color x:Key="LightTextColor">#999999</Color>
+            <Color x:Key="Red">#D33149</Color>
 
             <Style TargetType="NavigationPage">
                 <Setter Property="BarBackgroundColor" Value="{StaticResource Primary}" />
